--- a/templates/index3.html
+++ b/templates/index3.html
@@ -1,3 +1,4 @@
+<!-- index2.html -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -22,25 +23,19 @@
       </div>
     </div>
 
-    <!-- {% if transcript != "" %}
-    <div id="speechTranscriptContainer">
-      <h1>Transcript</h1>
-      <p id="speechText">{{ transcript }}</p>
-    </div>
-    {% endif %} 
--->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.3/socket.io.js"></script>
     <script>
-      function updateTranscript() {
-        fetch("/transcript")
-          .then((response) => response.text())
-          .then((data) => {
-            document.getElementById("speechText").innerText = data;
-          })
-          .catch((error) => console.error("Error:", error));
-      }
+      var socket = io.connect(
+        "http://" + document.domain + ":" + location.port
+      );
 
-      // Update transcript every 1 second (adjust as needed)
-      setInterval(updateTranscript, 1000);
+      // Logic to capture and stream audio data to the server
+      // ...
+
+      // Event listener for receiving transcript from the server
+      socket.on("transcript", function (data) {
+        document.getElementById("speechText").innerText = data.transcript;
+      });
     </script>
   </body>
 </html>
